# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import packagesRouter from "./packages";
+import batchesRouter from "./batches";
 import customersRouter from "./customers";
 import adminsRouter from "./admins";
 import dashboardRouter from "./dashboard";
@@ -14,6 +15,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/packages", packagesRouter);
+router.use("/batches", batchesRouter);
 router.use("/customers", customersRouter);
 router.use("/admins", adminsRouter);
 router.use("/dashboard", dashboardRouter);
